[gd_scene load_steps=2 format=3 uid="uid://b8knsqvshqdxl"]

[ext_resource type="Script" uid="uid://bfi0g0hwyj47p" path="res://scenes/UI/ProblemDialog.gd" id="1_bryfd"]

[node name="ProblemDialog" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_bryfd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogImage" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="OptionButton2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
